stderr
PrinterTest.java:24: error: reached end of file while parsing
}
 ^
1 error
